Issue53/sonar findings (#56)
* refactor CardService and start writing tests

* autowire mongotemplate

* complete CategoryServiceIT

* solve testcontainer issue and start of Controller-IT

* finish CategoryControllerIT

* add Mapper test - category package complete  now